compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/PrivateInTrait.java
public abstract interface PrivateInTrait /* PrivateInTrait*/ {
}